--- a/rest/style.css
+++ b/rest/style.css
@@ -42,6 +42,20 @@ header nav {
     align-items: center;
 }
 
+/* index page  */
+
+.home_intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
+
+
+
+/* personal page */
 i {
     transition: transform 0.3s, color 0.3s;
 }
@@ -235,7 +249,6 @@ a.active i {
     .box {
         margin-top: 1rem;
     }
-
 }
 
 
